tests/verbatim_scanner/negative/annotation_lines.txxt
Expected: []
:: title :: This is an annotation
:: description :: More annotation content